Fix alerts design, position, and animations Improve current expand design on desktop Add bottom padding to hourly and daily summaries Add bottom radii to menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ button {
     font-weight: 500;
 }
 
+.weathercard > p {
+    padding-bottom: 4px;
+}
+
 .shade {
     height: 100vh;
     width: 100%;
@@ -464,6 +468,7 @@ button {
     transform: translateY(-130%);
     max-height: 280px;
     display: none;
+    border-radius: 0 0 12px 12px;
 }
 
 #historycontent {
@@ -659,7 +664,7 @@ button {
 }
 
 #dailycontent {
-    margin-top: 7px;
+    margin-top: 10px;
     margin-bottom: 12px;
     justify-content: stretch;
 }
@@ -727,7 +732,7 @@ button {
 
 #settings {
     position: fixed;
-    top: 73px;
+    top: 71px;
     right: 47px;
     height: 77px;
     width: 167px;
@@ -824,7 +829,7 @@ button {
 }
 
 #alertscard {
-    display: block;
+    display: flex;
     background-color: white;
     padding: 0;
     position: fixed;
@@ -834,13 +839,15 @@ button {
     border-radius: 3px;
     filter: drop-shadow(0 1px 3px rgb(40, 40, 40));
     z-index: 8;
-    height: 250px;
     overflow: visible;
     transform: scale(0);
     transform-origin: 95% top;
+    max-height: 250px;
 }
 
 #alertshidden {
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
     height: inherit;
 }
@@ -857,26 +864,33 @@ button {
 }
 
 #alertscontent {
-    overflow-y: scroll;
+    flex-grow: 1;
+    overflow-y: auto;
     height: inherit;
     padding: 8px 12px;
 }
 
 #alertsarrow {
-    background-color: #d32f2f;
     position: absolute;
-    right: 14px;
-    top: -5px;
-    height: 12px;
-    width: 12px;
-    transform: rotate(45deg);
-    border-radius: 3px;
+    right: 11px;
+    top: -9px;
+    height: 0;
+    width: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 10px solid #d32f2f;
 }
 
 @media only screen and (min-width: 768px) {
 
     input[type="text"] {
         line-height: 40px;
+    }
+
+    .expand {
+        width: calc(100% + 48px);
+        right: 24px;
+        padding: 15px 17px 14px;
     }
 
     .button:hover {
@@ -942,8 +956,7 @@ button {
         top: 0;
         transform: translateY(0) translateX(-120%);
         padding: 20px 25px 0;
-        box-shadow: 0 -5px 14px -3px rgb(43, 43, 43);
-        background-color: rgba(30, 30, 30, 0.9);
+        box-shadow: 6px 0 8px -6px rgb(43, 43, 43);
         border-radius: 0;
     }
 
@@ -971,9 +984,7 @@ button {
         width: 45%;
         position: fixed;
         right: calc(10% - 25px);
-        max-height: 370px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        max-height: 340px;
     }
 
     #historycontent {
@@ -994,8 +1005,7 @@ button {
         height: 100vh;
         width: 35%;
         transform: translateX(-120%);
-        box-shadow: 0 -5px 14px -3px rgb(43, 43, 43);
-        background-color: rgba(30, 30, 30, 0.9);
+        box-shadow: 6px 0 8px -6px rgb(43, 43, 43);
         border-radius: 0;
     }
 
@@ -1048,21 +1058,20 @@ button {
 
     #alertscard {
         top: auto;
-        bottom: 115px;
-        right: 70px;
-        width: 30%;
+        bottom: 113px;
+        right: 175px;
+        width: 35%;
         height: 250px;
-        transform-origin: 70% bottom;
+        transform-origin: 93% bottom;
+        max-width: 500px;
     }
 
     #alertsarrow {
-        display: none;
-        /*
-        right: 14px;
-        top: -5px;
-        height: 12px;
-        width: 12px;
-        */
+        top: auto;
+        right: 21px;
+        bottom: -9px;
+        border-bottom: none;
+        border-top: 10px solid white;
     }
     
 }
